I created a new branch

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
    <h1>Welcome To Git</h1> 
    <p>Added Git & Learning</p>
    <label>Something is wrong </label>
+   <span>I created a Branch</span>
 </body>
 </html>
