--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
    <h1>Welcome To Git</h1> 
-   <p>Added Git & Learning</p>
+   <p>Added Git & Learning
    <label>Something is wrong </label>
    <span>I created a Branch</span>
 </body>
